<resources>
    <string name="app_name">CiruBari</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="menu_reportes">Reportes</string>
    <string name="menu_dosis">Dosis</string>
    <string name="menu_calculadoras">Calculadoras</string>
    <string name="menu_nuevo">Nuevo</string>

    <string name="generar">Generar</string>
    <string name="cancel">Cancelar</string>

    <string name="procedimiento">Procedimiento</string>
    <string-array name="procedures_array">
        <item>Manga</item>
        <item>Bypass</item>
        <item>SADI</item>
    </string-array>

    <string-array name="genero_array">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

    <string name="fecha_nacimiento">Fecha de Nac.</string>
    <string name="genero">Género</string>
    <string name="edad">Edad</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="pais">País</string>
    <string name="estado">Estado</string>
    <string name="continuar">Continuar</string>
    <string name="nombreReporteRiesgo">Reporte de riesgo quirúrgico</string>

    <string-array name="estados_arrays">
        <item>-Seleccione-</item>
        <item>Aguascalientes</item>
        <item>Baja California</item>
        <item>Baja California Sur</item>
        <item>Campeche</item>
        <item>Coahuila</item>
        <item>Chiapas</item>
        <item>Chihuahua</item>
        <item>Ciudad de México</item>
        <item>Colima</item>
        <item>Durango</item>
        <item>Estado de México</item>
        <item>Guanajuato</item>
        <item>Guerrero</item>
        <item>Hidalgo</item>
        <item>Jalisco</item>
        <item>Michoacán</item>
        <item>Morelos</item>
        <item>Nayarit</item>
        <item>Nuevo León</item>
        <item>Oaxaca</item>
        <item>Puebla</item>
        <item>Queretaro</item>
        <item>Quintana Roo</item>
        <item>Sonora</item>
        <item>San Luis Potosi</item>
        <item>Sinaloa</item>
        <item>Sonora</item>
        <item>Tabasco</item>
        <item>Tamaulipas</item>
        <item>Tlaxcala</item>
        <item>Yucatán</item>
        <item>Zacatecas</item>
    </string-array>

    <string-array name="reportes_arrays">
        <item>-Seleccione Tipo de Reporte-</item>
        <item>Reporte por Género</item>
        <item>Reporte por Ubicación Geográfica</item>
        <item>Reporte por Edad</item>
        <item>Reporte por Tipo de Procedimiento</item>
    </string-array>
    <string name="generar_pdf">Generar PDF</string>
    <string name="dots">…</string>
    <string name="fecha_inicial">Fecha Inicial</string>
    <string name="fecha_final">Fecha Final</string>
    <string name="titulo_reportes">Módulo de Reportes</string>
    <string name="habilitar_filtros">Habilitar Filtros</string>

    <string name="cuestionario1">¿Fuma?</string>
    <string name="cuestionario2">¿Consume alguna droga?</string>
    <string name="cuestionario3">¿Ha tenido algún infarto en los últimos 6 meses?</string>
    <string name="cuestionario4">¿Le han puesto sangre?</string>
    <string name="cuestionario5">¿Lo han operado anteriormente?</string>
    <string name="cuestionario6">¿Ha sido diagnosticado con Diabetes?</string>
    <string name="cuestionario7">¿Es hipertenso?</string>
    <string name="cuestionario8">¿Hepatopatías?</string>
    <string name="cuestionario9">¿Nefropatías?</string>
    <string name="cuestionario10">¿Sufre de convulsiones?</string>
    <string name="cuestionario11">¿Ha padecido de asma?</string>
    <string name="cuestionario12">¿Tiene dientes postizos?</string>
    <string name="cuestionario13">¿Ronca de noche?</string>
    <string name="cuestionario14">¿Tiene varices en las piernas?</string>
    <string name="title_activity_risk_report">RiskReport</string>
    <string name="title_activity_drugs_details">DrugsDetailsActivity</string>

    <string name="mecanismo">
        Inhibe la actividad de la ciclooxigenasa, y por tanto la síntesis de prostaglandinas. A dosis analgésicas, efecto antiinflamatorio menor que el de otros AINE."
    </string>
    <string name="indicaciones">
    Inyectable: tto. a corto plazo del dolor moderado o severo en postoperatorio y dolor causado por cólico nefrítico. Oral: tto. a corto plazo del dolor leve o moderado en postoperatorio.
    </string>
    <string name="contraindicaciones">
    Hipersensibilidad al ketorolaco trometamol u otros AINE (posibilidad de sensibilidad cruzada con AAS y otros inhibidores de la síntesis de prostaglandinas); úlcera péptica activa; antecedente de ulceración, sangrado o perforación gastrointestinal; síndrome completo o parcial de pólipos nasales, angioedema o broncoespasmo; asma; insuf. cardíaca grave; I.R. moderada a severa; hipovolemia o deshidratación; diátesis hemorrágica y trastornos de la coagulación, hemorragia cerebral; intervenciones quirúrgicas con alto riesgo hemorrágico o hemostasis incompleta; no debe utilizarse asociado con otros AINE ni con AAS, incluyendo los inhibidores selectivos de la ciclooxigenasa-2; terapia anticoagulante con dicumarínicos o con heparina a dosis plenas; uso concomitante con: probenecid, sales de litio, pentoxifilina (riesgo de sangrado gastrointestinal); embarazo, parto o lactancia; niños menores de 16 años; profilaxis analgésica antes o durante la intervención quirúrgica.
    </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>