<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewReports"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Put form controls here-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/titulo_reportes"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:height="80dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerReportes"
            android:layout_weight="0.65"
            style="@style/MyEditTextStyle"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:entries="@array/reportes_arrays" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkboxFiltros"
        android:layout_marginTop="5dp"
        android:text="@string/habilitar_filtros">
    </CheckBox>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/Filtros">

            <TextView
                android:id="@+id/tvSelectedDate"
                android:layout_width="150dp"
                android:layout_height="40dp"
                style="@style/MyEditTextStyle"
                android:hint="@string/fecha_inicial"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDate"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:background="@color/dark_blue"
                android:padding="5dp"
                android:text="@string/dots"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tvSelectedDateFinal"
                android:layout_width="150dp"
                android:layout_height="40dp"
                style="@style/MyEditTextStyle"
                android:hint="@string/fecha_final"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDateFinal"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:background="@color/dark_blue"
                android:padding="5dp"
                android:text="@string/dots"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <RelativeLayout android:id="@+id/RelativeLayout01"
            android:layout_width="fill_parent"
            android:layout_marginTop="15dp"
            android:layout_height="fill_parent">
            <Button
                android:id="@+id/generarReporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/dark_blue"
                android:padding="5dp"
                android:text="@string/generar_pdf"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>